# vault

./: Makefile.am  README.md  autogen.sh  configure.ac  vault
common/: Application.js  Logger.js  VaultWindow.js
data/: Makefile.am  io.github.konkor.vault.desktop
data/icons/: Makefile.am
data/themes/: Makefile.am
data/themes/default/: gtk.css
